[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_toolbox"
version = "0.0.1"
dependencies = [
    "astropy",
    "contourpy",
    "h5py",
    "matplotlib",
    "numpy",
    "pillow",
    "requests",
    "scipy",
]

[project.optional-dependencies]
full = "alive-progress"
